--- a/dunder_mifflin_emp_project/DM_emp_app/templates/index.html
+++ b/dunder_mifflin_emp_project/DM_emp_app/templates/index.html
@@ -1,21 +1,51 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dunder Mifflin Employee Portal</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="container">
-      <h1>Welcome to Dunder Mifflin Employee Portal !</h1>
-      <hr>
-      <a class="btn btn-secondary" href="/allEmp" role="button" style="background-color: crimson; color: white;">View All Employees</a>
-      <a class="btn btn-secondary" href="/addEmp" role="button" style="background-color: crimson; color: white;">Add an Employee</a>
-      <a class="btn btn-secondary" href="/removeEmp" role="button" style="background-color: crimson; color: white;">Delete an Employee</a>
-      <a class="btn btn-secondary" href="/filterEmp" role="button" style="background-color: crimson; color: white;">Filter Employee details</a>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Dunder Mifflin Employee Portal</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+</head>
+
+<body>
+  <div class="container">
+    {%if messages %}
+    {% for message in messages%}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+      <strong>{{ message }}</strong>
+      <button type="button" class="btn-close ms-auto" data-bs-dismiss="alert" aria-label="Close">
+      </button>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-  </body>
+    {%endfor%}
+    {%endif%}
+    <h1>Welcome to Dunder Mifflin Employee Portal !</h1>
+    {% if user.is_authenticated %}
+    <a class="btn btn-secondary" href="/allEmp" role="button" style="background-color: crimson; color: white;">View All
+      Employees</a>
+    <a class="btn btn-secondary" href="/addEmp" role="button" style="background-color: crimson; color: white;">Add an
+      Employee</a>
+    <a class="btn btn-secondary" href="/removeEmp" role="button" style="background-color: crimson; color: white;">Delete
+      an Employee</a>
+    <a class="btn btn-secondary" href="/filterEmp" role="button" style="background-color: crimson; color: white;">Filter
+      Employee details</a>
+    <a class="btn btn-secondary" href="/filterEmp" role="button" style="background-color: crimson; color: white;">Filter
+      Employee details</a>
+    <a class="btn btn-secondary" href="/logout" role="button" style="background-color: crimson; color: white;">Logout</a>
+    <hr>
+    {% else%}
+    <a class="btn btn-secondary" href="/login" role="button" style="background-color: crimson; color: white;">Login to
+      portal</a>
+    <hr>
+    {% endif%}
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
